+ Added a new core plugin called skeleton to help out new plugin developers.
+ Added translation template generator to help out translators with translating Frog core and plugins.
+ Added Norwegian and Swedish core translations.
+ Added updated Chinese translation.
+ Removed split between frontend and backend.
+ Added an ID to the "view this page" link so it can be styled.
- Fixed issue with settings table. Changed table setting's field value to TEXT instead of VARCHAR.
- Fixed GET variables not being available in Frog's frontend. - issue 75
- Fixed issue where AutoLoader did not find file for 'PageArchiveMonthIndex' - issue 101
- Fixed issue where saving a page without title results in loss of entered content - issue 68
- Fixed issue with filename lowercasing during upload of files. Thanks david - issue 113
- Fixed previous()/next() functions to work for all levels. Thanks rid - issue 109
- Fixed "Add child" tooltip for browsers not picking up the alt value of the icon.
- Fixed broken View Site link for TLDs starting with 'a' - issue 116
- Fixed XHTML compatibility problem with Comment plugin.
- Fixed issue where only the last addJavascript was accepted.
- Fixed admin CSS so that foreground colours are declared - issue 137
. Updated comment plugin to make use of statistics_api plugin if available and enabled.
. Restricted access to backend to roles administrator, developer and editor - issue 122
. Updated backend layout to make error and success messages automatically dissappear after 1.5 sec.
. Updated readme.txt with requirements detail for MySQL server.
. Updated file_manager plugin translations to conform to new template.
. Updated comments in preparation for PHPDoc documentation.
. Renamed root dir text files to avoid name conflicts and accomodate Windows users.
. Renamed style.css into screen.css for more consistency with print.css in Normal layout.
. Simplified Comment plugin to make use of Plugin::getAllSettings() and friends.