@@ -1,0 +1,197 @@
+﻿<?php
+
+	/**
+	 * Danish language file [DA/dk]
+	 *
+	 * @package frog
+	 * @subpackage translations
+	 *
+     * @author Kenan Christensen <kenan@devmore.org>
+	 * @version Frog x.y.z
+	 */
+
+return array(
+
+	/* General */
+	'Administration'  => 'Administration',
+	'Pages'           => 'Sider',
+	'Snippets'        => 'Kodestykker',
+	'Layouts'         => 'Layouts',
+	'Users'           => 'Brugere',
+	'Modify'          => 'Rediger',
+	'Action'          => 'Handling',
+	'Close'           => 'Luk',
+	'Save'            => 'Arkiver',
+	'Save and Continue Editing' => 'Arkiver og Forsæt Redigering',
+	'or'              => 'eller',
+	'Cancel'          => 'Annuller',
+	'Name'            => 'Navn',
+	'Last updated by' => 'Sidst opdateret af',
+	'on'              => 'på',
+	'Upload'          => 'Upload',
+	'Are you sure you wish to delete' => 'Er du sikker på du ønsker at slette',
+	'Published'       => 'Offentliggjort',
+	'Draft'           => 'Udkast',
+	'Reviewed'        => 'Anmeldes',
+	'Hidden'          => 'Gemt',
+	'More'            => 'Mere',
+	'Less'            => 'Mindre',
+	'Add'             => 'Tilføj',
+	'Required.'       => 'Påkrævet.',
+	'Optional.'       => 'Valgfri',
+	'yes'             => 'ja',
+	'no'              => 'nej',
+
+	/* Layouts */
+	'Layout'            => 'Layout',
+	'New Layout'        => 'Nyt Layout',
+	'What is a Layout?' => 'Hvad er et Layout?',
+	'Use layouts to apply a visual look to a Web page. Layouts can contain special tags to include
+	  page content and other elements such as the header or footer. Click on a layout name below to
+	  edit it or click <strong>Remove</strong> to delete it.' => 'Brug layouts for at påføre et visuelt udseende til en Webside. Layouts kan indeholde særlige koder for at inkludere side indhold samt andre elementer, som sidehoved og sidefod. Klik på layoutets navn nedenfor for at redigere det, eller klik <strong>Fjern</strong> for at slette det.',
+	'Add Layout'        => 'Tilføj Layout',
+	'Edit Layout'       => 'Rediger Layout',
+	'Remove Layout'     => 'Fjern Layout',
+	'inherit'           => 'arve',
+
+	/* Pages */
+	'Page'                    => 'Side',
+	'reorder'                 => 'Organiser',
+	'Add Page'                => 'Tilføj Side',
+	'Edit Page'               => 'Rediger Side',
+	'Status'                  => 'Status',
+	'Order'                   => 'Rækkefølge',
+	'Add child'               => 'Tilføj child',
+	'Add Tab'                 => 'Tilføj Fane',
+	'Add Part'                => 'Tilføj Del',
+	'Remove Tab'              => 'Fjern Fane',
+	'Delete the current tab?' => 'Slet nuværende fane?',
+	'Remove page'             => 'Fjern side',
+	'Remove page disable'     => 'Fjern side deaktivering',
+	'Drag and Drop'           => 'Træk og Slip',
+	'Drag and Drop disable'   => 'Træk og Slip deaktivering',
+	'Page Title'              => 'Side Titel',
+	'Metadata'                => 'Metadata',
+	'Filter'                  => 'Filter',
+	'none'                    => 'ingen',
+	'Page Type'               => 'Side Type',
+
+	/* Plugins */
+	'Plugin'    => 'Programtilføjelse',
+	'Website'   => 'Webside',
+	'Version'   => 'Version',
+	'Latest'    => 'Seneste',
+	'Enabled'   => 'Aktiveret',
+
+	/* Settings */
+	'Settings'              => 'Indstillinger',
+	'Admin Site title'      => 'Admin Side Titel',
+	'Language'              => 'Sprog',
+	'Administration Theme'  => 'Administrationerne Tema',
+	'Page options'          => 'Side indstillinger',
+	'Default Status'        => 'Standard Status',
+	'Default Filter'        => 'Standard Filter',
+	'Optional component'    => 'Valgfri komponent',
+	'Display stats'         => 'Vis statistik',
+	'Display file manager'  => 'Vis filhåndtering',
+	'By using <strong>&lt;img src="img_path" /&gt;</strong> you can set your company logo instead of a title.' => 'Ved at bruge <strong>&lt;img src="img_path" /&gt;</strong> kan du vise et logo istedet for en titel.',
+	'This will set your language for the backend.'  => 'Dette vil sætte sproget for administrations panelet.',
+	'This will change your Administration theme.'   => 'Dette vil ændre dit Administrations tema',
+	'Only for filter in pages, NOT in snippets'     => 'Kun for filter i sider, IKKE kodestykker',
+
+	/* Snippets */
+	'New Snippet'           => 'Ny Kodestykke',
+	'What is a Snippet?'    => 'Hvad er et Kodestykke?',
+	'Snippets are generally small pieces of content which are included in other pages or layouts.' => 'Kodestykker er generelt små stykker af indhold som er inkluderet på andre sider eller layouts.',
+	'Snippet'               => 'Kodestykke',
+	'Add Snippet'           => 'Tilføj Kodestykke',
+	'Edit Snippet'          => 'Rediger Kodestykke',
+	'Remove Snippet'        => 'Fjern Kodestykke',
+
+	/* Users */
+	'Add User'                  => 'Tilføj Bruger',
+	'Edit user'                 => 'Rediger Bruger',
+	'Username'                  => 'Brugernavn',
+	'E-mail'                    => 'E-mail',
+	'Password'                  => 'Kodeord',
+	'Forgot password?'          => 'Glemt kodeord?',
+	'Forgot password'           => 'Glemt kodeord',
+	'Email address:'            => 'E-mail adresse',
+	'Confirm Password'          => 'Bekræft Kodeord',
+	'Send password'             => 'Send kodeord',
+	'No user found!'            => 'Ingen bruger fundet!',
+	'Login'                     => 'Log på',
+	'Remember me for 14 days'   => 'Husk mig i 14 dage',
+	'Roles'                     => 'Roller',
+	'Administrator'             => 'Administrator',
+	'Developer'                 => 'Udvikler',
+	'Editor'                    => 'Bidrager',
+	'Optional. Please use a valid e-mail address.'  => 'Valgfri. Venligst brug en gyldig e-mail adresse.',
+	'At least 3 characters. Must be unique.'        => 'Mindst 3 tegn lang. Skal være unikt',
+	'At least 5 characters.'    => 'Mindst 5 tegn langt.',
+	'Leave password blank for it to remain unchanged.' => 'Lad kodeord være blankt for at forblive uændret.',
+	'Roles restrict user privileges and turn parts of the administrative interface on or off.' => 'Roller begrænser brugernes privilegier og dele af den administrative brugerflade tændt eller slukket.',
+	'New User'                  => 'Ny Bruger',
+	'Where do the avatars come from?' => 'Hvor kommer avatarene fra?',
+	'The avatars are automatically linked for those with a <a href="http://www.gravatar.com/" target="_blank">Gravatar</a> (a free service) account.' => 'Avatarene er automatisk knyttet til <a href="http://www.gravatar.com/" target="_blank">Gravatar</a>. (gratis service) konto.',
+
+	/* Errors & Success */
+	'Layout has been added!'                            => 'Layout et blevet tilføjet!',
+	'Layout has not been added. Name must be unique!'   => 'Layout er <strong>ikke</strong> blevet tilføjet. Navnet skal være unikt!',
+	'Layout has been saved!'                            => 'Layout er blevet arkiveret!',
+	'Layout has not been saved. Name must be unique!'   => 'Layout er <strong>ikke</strong> blevet arkiveret. Navnet skal være unikt!',
+	'Layout :name has been deleted!'                    => 'Layout :name er blevet slettet!',
+	'Layout :name has not been deleted!'                => 'Layout :name er <strong>ikke</strong> blevet slettet!',
+	'Layout not found!'                                 => 'Layout ikke fundet!',
+
+	'Login failed. Please check your login data and try again.' => 'Login mislykkedes. Venligst kontroller dit brugernavn/kodeord, og prøv igen.',
+
+	'Page has been saved!'              => 'Siden er blevet arkiveret!',
+	'Page has not been saved!'          => 'Siden er <strong>ikke</strong> blevet arkiveret!',
+	'Page not found!'                   => 'Siden blev ikke fundet!',
+	'Page :title has been deleted!'     => 'Siden :title er blevet slettet!',
+	'Page :title has not been deleted!' => 'Siden :title er <strong>ikke</strong> blevet slettet!',
+	'Action disabled!'                  => 'Handling deaktiveret!',
+
+	'Snippet has been added!'                                => 'Kodestykke er blevet tilføjet!',
+	'Snippet has not been added. Name must be unique!'       => 'Kodestykke er <strong>ikke</strong> blevet tilføjet. Navnet skal være unikt!',
+	'Snippet :name has been saved!'                          => 'Kodestykke :name er blevet arkiveret!',
+	'Snippet :name has not been saved. Name must be unique!' => 'Kodestykke :name er <strong>ikke</strong> blevet arkiveret! Navnet skal være unikt!',
+	'Snippet :name has been deleted!'                        => 'Kodestykke :name er blevet slettet!',
+	'Snippet :name has not been deleted!'                    => 'Kodestykke :name er <strong>ikke</strong> blevet slettet!',
+	'Snippet not found!'                                     => 'Kodestykke blev ikke fundet!',
+
+	'You do not have permission to access the requested page!' => 'Du har ikke adgang til den ønskede side!',
+	'Password and Confirm are not the same or too small!'      => 'Kodeord og Bekræft er ikke det samme eller for få tegn!',
+	'Username must contain a minimum of 3 characters!'         => 'Brugernavn skal indeholde mindst 3 tegn!',
+	'User has been added!'                                     => 'Bruger er blevet tilføjet!',
+	'User has not been added!'                                 => 'Bruger er <strong>ikke</strong> blevet tilføjet! ',
+	'User not found!'                                          => 'Bruger blev ikke fundet!',
+	'User has been saved!'                                     => 'Bruger er blevet arkiveret!',
+	'User has not been saved!'                                 => 'Bruger er ikke blevet arkiveret!',
+	'User <strong>:name</strong> has been deleted!'            => 'Bruger <strong>:name</strong> er blevet slettet!',
+	'User <strong>:name</strong> has not been deleted!'        => 'Bruger <strong>:name</strong> er ikke blevet slettet!',
+
+	/*	Layout */
+	'You are currently logged in as'    => 'Du er i øjeblikket logget ind som',
+	'Log Out'                           => 'Log ud',
+	'View Site'                         => 'Vis Siden',
+	'Thank you for using'               => 'Tak fordi du bruger',
+	'version'                           => 'version',
+	'Page rendered in'                  => 'Side renderet på',
+	'seconds'                           => 'sekunder',
+	'Memory usage:'                     => 'Hukommelse brug:',
+
+	/* TO BE REMOVED IN LATER VERSIONS */
+	
+	/* File manager */
+	'Files' => 'Filer',
+
+	/* Comments */
+	'Enable comments'       => 'Aktiver kommentarer',
+	'Auto approve comments' => 'Auto godkend kommentarer',
+	'Delete'                => 'Slet',
+	'Reject'                => 'Afvis',
+	'Comments'              => 'Kommentarer',
+
+);
