@@ -1,0 +1,43 @@
+<?php
+
+	/**
+	 * Danish language file for plugin file_manager
+	 *
+	 * @package frog
+	 * @subpackage plugin.file_manager.translations
+	 *
+	 * @author Kenan Christensen <kenan@devmore.org>
+	 * @version Frog 0.9.4
+	 */
+
+    return array(
+        'Action' => 'Handling',
+        'Are you sure you wish to delete' => 'Er du sikker på du ønsker at slette',
+        'Cancel' => 'Annuller',
+        'Change mode' => 'Skift tilstand',
+        'Close' => 'Luk',
+//        'Create' => '',
+        'Create new directory' => 'Opret ny mappe',
+        'Create new file' => 'Opret ny fil',
+        'Directory :name has not been created!' => 'Mappen :name er ikke blevet oprettet!',
+        'Directory is not writable! File has not been saved!' => 'Mappen er ikke skrivbare! Fil er ikke blevet arkiveret!',
+        'File' => 'Fil',
+        'File :name has been created with success!' => 'Fil :name er blevet oprettet med succes!',
+        'File :name has not been created!' => 'Fil :name er blevet oprettet!',
+//        'File has been saved with success!' => '',
+        'File has not been uploaded!' => 'Fil er ikke blevet uploadet.',
+//        'File is not writable! File has not been saved!' => '',
+        'File or directory not found!' => 'Fil eller mappen blev ikke fundet!',
+        'Modify' => 'Rediger',
+//        'Permission denied!' => '',
+        'Permissions' => 'Rettigheder',
+        'Rename' => 'Omdøb',
+        'Save' => 'Arkiver',
+        'Save and Continue Editing' => 'Arkiver og Forsæt Redigering',
+        'Size' => 'Størrelse',
+        'Upload' => 'Upload',
+        'Upload file' => 'Upload fil',
+        'You do not have permission to access the requested page!' => 'Du har ikke rettigheder til adgang af den ønskede side!',
+        'or' => 'eller',
+//        'overwrite it?' => '',
+    );
